--- a/main.css
+++ b/main.css
@@ -10,13 +10,13 @@ body {
 html  {
   height: 100%;
   width: 100%;
-  position: relative;
+  /*position: relative;*//*in IE8 this causes the iframe content not to render*/
 }
 
 body {
 /*  min-height: 100%;
-  min-width: 100%;
-  position: relative;*/
+  min-width: 100%;*/
+  position: relative;
   padding: 1px 0 0 0;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -24,30 +24,33 @@ body {
   margin: 0;
 }
 
-body.pageA {
+html.pageA {
   background-color: PaleTurquoise;
 }
 
-body.pageB {
+html.pageB {
   background-color: palegreen;
 }
 
-body:before {
+html:before {
   font-size: 920px;
   left: 3%;
-  opacity: 0.02;
+  /*opacity: 0.02;*//*thanks to IE8 I just set the colors I eye-dropped in FF */
   position: absolute;
   top: -230px;
   font-weight: bold;
   z-index: -1;
   height: 0;
+  cursor: default;
 }
 
-body.pageA:before {
+html.pageA:before {
   content: "A";
+  color: #ACE8E7;
 }
-body.pageB:before {
+html.pageB:before {
   content: "B";
+  color: #97F796;
 }
 
 h1,
